samples/k8s/fortio-dev-injected.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio-dev
  namespace: fortio-dev
spec:
  ports:
  - port: 8080
    name: http-echo
  selector:
    app: fortio-dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: fortio-dev
  namespace: fortio-dev
spec:
  selector:
    matchLabels:
      app: fortio-dev
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/interceptionMode: REDIRECT
        sidecar.istio.io/proxyCPU: 200m
        sidecar.istio.io/status: '{"version":"3f5745f009f14ee0f3c6b26263d37d97e59e6f4386840dd583e155d6f2e51099","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null}'
        traffic.sidecar.istio.io/excludeInboundPorts: "15020"
        traffic.sidecar.istio.io/includeInboundPorts: 8080,8081,8079
        traffic.sidecar.istio.io/includeOutboundIPRanges: '*'
        sidecar.istio.io/inject: "false"
      creationTimestamp: null
      labels:
        app: fortio-dev
        security.istio.io/tlsMode: istio
        version: v1
    spec:
      containers:
      - name: dnsutils
        image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
        command:
          - sleep
          - "3600"
        imagePullPolicy: IfNotPresent

      - args:
        - server
        image: costinm/fortio:latest
        name: fortio
        ports:
        - containerPort: 8080
        - containerPort: 8081
        - containerPort: 8079
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --serviceCluster
        - fortio-dev.$(POD_NAMESPACE)
        - --proxyLogLevel=warning
        - --proxyComponentLogLevel=misc:error
        - --trust-domain=cluster.local
        - --concurrency
        - "2"
        image: gcr.io/istio-testing/proxyv2:latest
        imagePullPolicy: Always
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15090
          initialDelaySeconds: 1
          periodSeconds: 2
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
          readOnlyRootFilesystem: false
          runAsGroup: 1337
          runAsNonRoot: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /var/run/secrets/istio
          name: istiod-ca-cert
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /var/run/secrets/tokens
          name: istio-token
        - mountPath: /etc/istio/pod
          name: istio-podinfo
      securityContext:
        fsGroup: 1337
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              fieldPath: metadata.annotations
            path: annotations
        name: istio-podinfo
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - configMap:
          name: istio-ca-root-cert
        name: istiod-ca-cert
status: {}
---
