samples/k8s/istiod-ingress.yaml
# Istiod doesn't expose 8080 as a service - it should really be
# a statefull set
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istiod-debug
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  tls:

    - secretName: istiod
      hosts:
      - istiod.asm.istio.webinf.info
  rules:
    - host: istiod.asm.istio.webinf.info
      http:
        paths:
          - path: /debug/.*
            backend:
              serviceName: istio-pilot
              servicePort: 8080
---
